--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,10 @@
     "autoload-dev": {
         "psr-4": {
             "Tests\\": "tests/"
-        }
+        },
+        "classmap": [
+            "App/Http/Controllers/RepasswordController.php"
+        ]
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
